--- a/Automation Game/Resources/layout/inventory_layout.xml
+++ b/Automation Game/Resources/layout/inventory_layout.xml
@@ -1,27 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/main">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/slotsLayout1"
-                android:orientation="horizontal"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/slotsLayout2"
-                android:orientation="horizontal"/>
-        </LinearLayout>
-    </ScrollView>
+    android:layout_height="match_parent"
+    android:id="@+id/main">
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/slotsLayout1"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot1"
+            android:tag="1"
+            android:background="@drawable/inventory_slot_border"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/slot2"
+            android:tag="2"
+            android:background="@drawable/inventory_slot_border"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot3"
+            android:tag="3"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/inventory_slot_border"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot4"
+            android:tag="4"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/inventory_slot_border"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/slotsLayout2"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot5"
+            android:tag="5"
+            android:background="@drawable/inventory_slot_border"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot6"
+            android:tag="6"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/inventory_slot_border"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot7"
+            android:tag="7"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/inventory_slot_border"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slot8"
+            android:tag="8"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/inventory_slot_border"/>
+    </LinearLayout>
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/slotEquip"
+        android:background="@drawable/inventory_slot_border"
+        android:layout_gravity="end"/>
 </LinearLayout>
