--- a/Automation Game/Resources/layout/inventory_layout.xml
+++ b/Automation Game/Resources/layout/inventory_layout.xml
@@ -75,10 +75,23 @@
             android:layout_marginLeft="20dp"
             android:background="@drawable/inventory_slot_border"/>
     </LinearLayout>
-    <Button
-        android:layout_width="80dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:id="@+id/slotEquip"
-        android:background="@drawable/inventory_slot_border"
-        android:layout_gravity="end"/>
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/debug"
+            android:background="@drawable/settings"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="27.0dp" />
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/slotEquip"
+            android:background="@drawable/inventory_slot_border"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 </LinearLayout>
