--- a/Automation Game/Resources/layout/startup_menu.xml
+++ b/Automation Game/Resources/layout/startup_menu.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@android:id/background">
+    android:id="@+id/backdrop">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
