--- a/Automation Game/Resources/layout/startup_menu.xml
+++ b/Automation Game/Resources/layout/startup_menu.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/backdrop">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/start"
-        android:text="start"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/last"
-        android:text="lust"/>
+    android:id="@+id/backdrop"
+    android:gravity="center"
+    >
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:id="@+id/start"
+            android:text="@string/start"
+        android:textColor="@android:color/white"
+            android:background="@drawable/inventory_slot_border"
+        />
+        <Button
+        android:layout_marginLeft="20dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:id="@+id/last"
+            android:text="@string/load"
+        android:textColor="@android:color/white"
+        android:background="@drawable/inventory_slot_border"
+    />
+    
 </LinearLayout>
