--- a/Automation Game/Resources/layout/inventory_layout.xml
+++ b/Automation Game/Resources/layout/inventory_layout.xml
@@ -78,7 +78,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/access_layout">
         <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
